notifybysnore: correct action buttons

Don't add a semicolon before the first action string to avoid an empty
button

BUG: 486911